August 1st Update

--- a/TestWebsites/Wikipage/5gBrainInterference.html
+++ b/TestWebsites/Wikipage/5gBrainInterference.html
@@ -4,7 +4,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>5G Brain Interference</title>
+        <head>
+            <title>WorldTruth</title>
+            <link rel="icon" href="images/image.png" 
+              type="image/x-icon">
+        </head>
         <style>
             .inline-block {
                 display: inline-block;
@@ -34,7 +38,7 @@
         <div class="inline-block">
             <img src="images/5gHandCream.png" width="100%" style="border: 3px solid black;">
             <br>
-            <caption>&#40Fig. 1&#41 anti-5G Cream</caption>
+            <caption>&#40Fig. 2&#41 anti-5G Cream</caption>
         </div>
     </body>
 </html>
