--- a/TestWebsites/Wikipage/main.html
+++ b/TestWebsites/Wikipage/main.html
@@ -2,9 +2,21 @@
 
 <html>
     <head>
-        <title>WorldTruth</title>
-        <link rel="icon" href="image.png" 
-          type="image/x-icon">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <head>
+            <title>WorldTruth</title>
+            <link rel="icon" href="images/image.png" 
+              type="image/x-icon">
+        </head>
+        <style>
+            .inline-block {
+                display: inline-block;
+                width: 40%; /* Adjust width as needed */
+                vertical-align: top; /* Aligns the top of the divs */
+                padding: 4%;
+            }
+        </style>
     </head>
     <body>
         <h1>World Truth</h1>
@@ -13,7 +25,7 @@
         <h2>Wiki Pages</h2>
         <ol>
             <li><a href="5gBrainInterference.html">5G Brain Inference</a></li>
-            <li><a href="">Flat Earth</a></li>
+            <li><a href="flatEarth.html">Flat Earth</a></li>
             <li><del><a href="">Microchip Vaccine</a></del> (site currently down because of attacks from the deep state)</li>
         </ol>
     </body>
